# srgssr-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  EXAMPLES.md  GITHUB_METADATA.md  LICENSE  README.de.md  README.md  README_EN.md  claude_desktop_config.json  pyproject.toml  server.py
.github/: dependabot.yml
.github/workflows/: ci.yml  live-test.yml  publish.yml  secret-scan.yml  test.yml
audits/2026-04-30-srgssr-mcp/findings/: ARCH-003-not-found-pattern.md  ARCH-007-capability-aggregation.md  OPS-001-test-strategy.md  OPS-002-documentation-standard.md  OPS-003-phases.md  SEC-004-ssrf-prevention.md  SEC-021-egress-allowlist.md
audits/2026-05-05T041445-Z-srgssr-mcp/: applicability.json  audit-meta.json  audit-report.md  check_status.json  profile.yaml  summary.json  verification-results.json
audits/2026-05-05T041445-Z-srgssr-mcp/findings/: ARCH-005-secret-hygiene-luecken.md  CH-004-ogd-lizenz-attribution.md  OBS-001-protocol-execution-error-trennung.md  OBS-002-error-detail-masking.md  SDK-001-fastmcp-lifespan-fehlt.md  SDK-002-output-envelope-fehlt.md  SDK-003-context-injection-fehlt.md  SEC-005-dns-rebinding-toctou.md  SEC-013-secret-storage-doku-rotation.md
audits/2026-05-05T041445-Z-srgssr-mcp/raw/: ARCH-001.txt  ARCH-002.txt  ARCH-003.txt  ARCH-004.txt  ARCH-005.txt  ARCH-006.txt  ARCH-007.txt  ARCH-008.txt  ARCH-009.txt  ARCH-011.txt  ARCH-012.txt  CH-004.txt  OBS-001.txt  OBS-002.txt  OBS-003.txt  OBS-004.txt  OPS-001.txt  OPS-002.txt  OPS-003.txt  SCALE-002.txt  SDK-001.txt  SDK-002.txt  SDK-003.txt  SDK-004.txt  SEC-004.txt  SEC-005.txt  SEC-006.txt  SEC-007.txt  SEC-008.txt  SEC-009.txt  SEC-013.txt  SEC-016.txt  SEC-018.txt  SEC-019.txt  SEC-020.txt  SEC-021.txt
docs/: network-egress.md  secret-management.md
src/srgssr_mcp/: __init__.py  _app.py  _http.py  _models.py  _provenance.py  config.py  logging_config.py  server.py
src/srgssr_mcp/tools/: __init__.py  aggregation.py  audio.py  epg.py  polis.py  prompts.py  resources.py  video.py  weather.py
tests/: conftest.py  test_live.py  test_logging.py  test_unit.py
