[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srgssr-mcp"
version = "1.0.0"
description = "MCP server for SRG SSR Swiss public media APIs (weather, video, audio, EPG, Polis)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]
keywords = [
    "mcp",
    "model-context-protocol",
    "srgssr",
    "srf",
    "rts",
    "rsi",
    "switzerland",
    "weather",
    "media",
    "polis",
    "votations",
    "opendata",
]

[project.scripts]
srgssr-mcp = "srgssr_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/malkreide/srgssr-mcp"
Repository = "https://github.com/malkreide/srgssr-mcp"
"Bug Tracker" = "https://github.com/malkreide/srgssr-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/srgssr_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
