[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srgssr-mcp"
version = "0.1.0"
description = "MCP server for SRG SSR public APIs – weather, TV/radio metadata, program guide & Swiss votations/elections since 1900"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "srgssr", "srf", "rts", "swiss", "media", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
]

[project.scripts]
srgssr-mcp = "srgssr_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/srgssr-mcp"
Repository = "https://github.com/malkreide/srgssr-mcp"
"Bug Tracker" = "https://github.com/malkreide/srgssr-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/srgssr_mcp"]

[tool.ruff]
line-length = 120
include = ["src/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: tests against real APIs (manual, nightly only; deselect with '-m \"not live\"')",
]
